Adding java streaming every 2 sec for word count

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 app.name=SpringBoot-Spark-Streaming
 spark.home=/usr/local/spark
 local.master=local[*]
+
+streaming.host=localhost
+streaming.port==12345
